fix rent test e improvements nel rentservice